fix spacing

--- a/assets/scss/hyde-hyde/_project.scss
+++ b/assets/scss/hyde-hyde/_project.scss
@@ -54,7 +54,7 @@
   margin-bottom: 3.5rem;
 }
 .row-space {
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 
 // only needs some pieces from Bootstrap
